# Ascend-mindsdk-referenceapps

./: .gitignore  README.md  README.zh.md
TrustAiSDK/: README.md  README_INTERFACE.md  build.sh  pyproject.toml  setup.py  setup_utils.py  version
TrustAiSDK/ai_asset_obfuscate/: __init__.py  requirements.txt
TrustAiSDK/ai_asset_obfuscate/api/: __init__.py  asset_obfuscation.py  data_asset_obfuscation.py  model_asset_obfuscation.py  passwd_manage.py  seed_manage.py
TrustAiSDK/ai_asset_obfuscate/conf/DeepSeek-671B-w8a8/: common_config.json
TrustAiSDK/ai_asset_obfuscate/conf/DeepSeek-R1-Distill-Qwen-1.5B/: common_config.json  data_protection_config.json  data_protection_config_model_confused.json
TrustAiSDK/ai_asset_obfuscate/conf/DeepSeek-R1-Distill-Qwen-14B/: common_config.json  data_protection_config.json  data_protection_config_model_confused.json  model_protection_config.json
TrustAiSDK/ai_asset_obfuscate/conf/DeepSeek-R1-Distill-Qwen-32B/: common_config.json  data_protection_config.json  data_protection_config_model_confused.json  model_protection_config.json
TrustAiSDK/ai_asset_obfuscate/constants/: __init__.py  constant.py  dtype.py  error_code.py  model_type.py  op_type.py
TrustAiSDK/ai_asset_obfuscate/exception/: __init__.py  obf_exception.py
TrustAiSDK/ai_asset_obfuscate/libs/: __init__.py
TrustAiSDK/ai_asset_obfuscate/model/: __init__.py  psk_config.py  tls_config.py
TrustAiSDK/ai_asset_obfuscate/utils/: __init__.py
TrustAiSDK/ai_asset_obfuscate/vision_api/: __init__.py  image_data_asset_obfuscation.py  video_data_asset_obfuscation.py
(+194 files in other folders)
